--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <header>
-        Tones Color
+        <div class="typecolor hex">  
+            <h2>Hex</h2>
+            <divc class="hexcode">ffffff</div>
+        </div>
+        <div class="typecolor rgb">
+            <h2>RGB</h2>
+            <div class="rgbcode">rgb(255,255,255)</div>
+        </div>
+        <div class="typecolor cmyk">
+            <h2>CMYK</h2>
+            <div class="cmykcode">cmyk(0,0,0,0)</div>
+        </div>
     </header>
     <main>
         <div class="inputs">
